added drap&drop, ironed out bugs, changed app style. Hopefully this is a pass!

--- a/starter/public/index.html
+++ b/starter/public/index.html
@@ -12,6 +12,10 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Libri</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- Fallback message for users with JavaScript disabled -->
